# aicoc-ai-immersion

./: Makefile  README.md  lgf.sh  process_files.sh  settings.ini
DDL-and-LMS/: DDL_Lab.ipynb  LMS_Lab.ipynb  Lab:LMS and DDL (vanstee@us.ibm.com).docx  TensorFlow-Lab-UTA.docx
FastAI/: .condarc.acc  00_notebook_tutorial.ipynb  01_fastai_image_classification.ipynb  01_fastai_image_classification_bc.ipynb  FastAI-101.pptx  Fastai_image_classification_solution_v1.ipynb  Fastai_image_classification_v1.ipynb  Fastai_image_classification_v2.ipynb  README.md  README.sh  index.ipynb  lesson1-pets.ipynb  manage_CECC.py  setup_class.sh  setup_fastai.sh  start_jupyter.sh
GAN/: FastAI_WGAN_example.ipynb  GAN 101.pptx  Pytorch_MNIST_GAN_example.ipynb
H2O-DAI/: H2O Lab Note Draft 2020-04-23 12.42.08.boxnote  HopkinsDVEDIT.csv  covid19_canada.csv  covid19_countries.csv  renal.csv
Image-Segmentation/: 03 Segmentation-101.pptx  Segmentation-101.pptx  lesson3-camvid-tiramisu.ipynb  lesson3-camvid.ipynb
NLP/: Fastai_IMDB_NLP_example.ipynb  NLP-101.pptx  lesson3-imdb-lab.ipynb  lesson3-imdb.ipynb
ORNL/: 01_ai_essentials.py  01_submit_aiessentials.lsf  02_rapids.ipynb  02_rapids.py  02_submit_rapids.lsf  03_pytorch_cifar.py  03_submit_pytorch.lsf  04_submit_ufa_train.lsf  04_ufa.ipynb  04_ufa.py  05_submit_ufa_inf.lsf  README.md  submit_cifar.lsf  submit_rapids.lsf  wmlce17-ornl.yml
PyhtonBasics/: 01Demo_Churn_Outlier4 immersion.ipynb  (+1 more)
UniversalFunctionApproximator/: CMakeLists.txt  HiWaterMark_state_dict.pt  UFA_steam_example.ipynb  build_ufa.sh  ufa  ufa.cpp  ufa_process.pptx
(+68 files in other folders)
